Reealizando refatoração para tirar os mocks e realizar as alterações para deixar a aplicação comunicando com a base de dados MySQL

--- a/spring-framework/demo-api/src/main/resources/application.yml
+++ b/spring-framework/demo-api/src/main/resources/application.yml
@@ -10,6 +10,7 @@ jpa:
       hibernate:
         format_sql: true
         ddl-auto: update
+        dialect: org.hibernate.dialect.MySQL8Dialect
 logging:
     level:
       org:
