--- a/spring-framework/demo-api/src/main/resources/application.yml
+++ b/spring-framework/demo-api/src/main/resources/application.yml
@@ -1,17 +1,19 @@
-spring.datasource:
-    url: jdbc:mysql://localhost:3306/demoapidb
-    username: usertodo
-    password: Usertodo16$
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/db_demoapi
+    username: admin2024
+    password: Admin2024
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-jpa:
+  jpa:
     show-sql: true
+    generate-ddl: true
     properties:
       hibernate:
         format_sql: true
         ddl-auto: update
-        dialect: org.hibernate.dialect.MySQL8Dialect
-logging:
+  logging:
     level:
       org:
         hibernate:
